<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Bus Reminder</string>
    <string name="reminder_scheduler">Click here to schedule a reminder!</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="alarmScheduled">Your bus alarm is scheduled!</string>
    <string name="title_activity_main">MainActivity</string> 
    <string name="checkboxArrivalAlarm">Arrival Alarm \n Remind me when bus is</string>
    <string name="checkboxDepartureAlarm1">Departure Alarm \n Remind me when bus is</string>
    <string name="textMinutesAway">minutes away.</string>
    <string name="textMetersAway">meters away from</string>
    <string name="textDefaultDestination">University of Victoria, BC</string>   

</resources>